# intel7_final_team6

./: .gitignore  .gitmodules  README.md
Qt_GUI/BoxBoxApplication/: BoxBoxApplication.pro  BoxBoxApplication.pro.bak  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_database.cpp  mainwindow_helpers.h  mainwindow_image.cpp  mainwindow_network.cpp  mainwindow_utils.cpp
arduino-proto/ToF/: ToF.ino
aruco/: README.md
aruco/aruco_pose_estimation/: calibration.yaml  package.xml  setup.py
aruco/aruco_pose_estimation/aruco_pose_estimation/: aruco_marker_detector.py  aruco_marker_pose_estimation_tf.py
docs/: protocol.md
firmware/arduino/IR_break_beam_sensor/: IR_break_beam_sensor.ino
firmware/arduino/L298N/: L298N.ino
firmware/stm32/IR_break_beam_test/: IR_break_beam_test.ioc
firmware/stm32/IR_break_beam_test/Core/Src/: main.c
firmware/stm32/ToF_TEST/: ToF_TEST.ioc
firmware/stm32/ToF_TEST/Core/Inc/: main.h
firmware/stm32/ToF_TEST/Core/Src/: main.c  stm32f4xx_hal_msp.c
firmware/stm32/esp8266_test/: esp8266_test.ioc
firmware/stm32/esp8266_test/Core/Inc/: esp.h  stm32f4xx_it.h
firmware/stm32/esp8266_test/Core/Src/: esp.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
firmware/stm32/final_project_fw/: final_project_fw.ioc
firmware/stm32/final_project_fw/Core/Inc/: beam.h  esp.h  loadcell.h  stm32f4xx_it.h
firmware/stm32/final_project_fw/Core/Src/: beam.c  esp.c  loadcell.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
firmware/stm32/final_project_fw/Smart_Iot_Office/: KMS_mini_project.ioc
firmware/stm32/hx711_i2c_demo/: hx711_i2c_demo.ioc
firmware/stm32/hx711_i2c_demo/Core/Inc/: hx711_dfrobot.h
firmware/stm32/hx711_i2c_demo/Core/Src/: hx711_dfrobot.c  main.c
firmware/stm32/uart_dma_test/: uart_dma_test.ioc
firmware/stm32/uart_dma_test/Core/Inc/: stm32f4xx_it.h  usart6_dma.h
firmware/stm32/uart_dma_test/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart6_dma.c
jetson_AI/: boxbox_opencv_ai.py  debug_live_new.py
launch/: emergency_bridge.launch.py  unload_mission.launch.py  unload_system.launch.py
microros_ws/firmware/: arm-none-eabi-gcc.cmake
microros_ws/firmware/dev_ws/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
microros_ws/firmware/dev_ws/log/: latest_build
microros_ws/firmware/mcu_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
microros_ws/firmware/mcu_ws/log/: latest_build
microros_ws/install/: local_setup.sh  setup.bash  setup.sh
microros_ws/install/micro_ros_agent/share/micro_ros_agent/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
microros_ws/install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
microros_ws/log/: latest_build
openCR/: README.md  turtlebot3.cpp
openCR/servo_control/: servo_control.ino
opencr_for_turtlebot3/: README.md
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros2_ws/log/: latest_build
ros_tcp_server/: build_tcp_iot_bridge.sh  server_command.txt
ros_tcp_server/install/iot_bridge_interfaces/share/iot_bridge_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_tcp_server/install/tcp_iot_bridge/share/tcp_iot_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_tcp_server/log/: latest_build
ros_tcp_server/src/iot_bridge_interfaces/: CMakeLists.txt  package.xml
ros_tcp_server/src/iot_bridge_interfaces/msg/: IotMessage.msg
ros_tcp_server/src/tcp_iot_bridge/: CMakeLists.txt  package.xml
ros_tcp_server/src/tcp_iot_bridge/src/: tcp_bridge_node.cpp
rpi/: uart3_driver_irq.c  uart3_irq_app.c
turtlebot3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
turtlebot3_ws/install/coin_d4_driver/include/coin_d4_driver/: coin_d4_base_handler.hpp  coin_d4_lifecycle_handler.hpp  multi_coin_d4_node.hpp  (+2 more)
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/turtlebot3_aruco/: CMakeLists.txt  package.xml
turtlebot3_ws/src/turtlebot3_aruco/include/turtlebot3_aruco/: aruco_pose_node.hpp
turtlebot3_ws/src/turtlebot3_aruco/launch/: aruco_pose.launch.py
turtlebot3_ws/src/turtlebot3_aruco/src/: aruco_pose_main.cpp  aruco_pose_node.cpp
turtlebot3_ws/src/turtlebot3_auto_unload/: README.md  package.xml  setup.cfg  setup.py
turtlebot3_ws/src/turtlebot3_auto_unload/config/: destinations.example.yaml  destinations.yaml
turtlebot3_ws/src/turtlebot3_auto_unload/launch/: auto_unload.launch.py  auto_unload_system.launch.py
turtlebot3_ws/src/turtlebot3_auto_unload/resource/: turtlebot3_auto_unload
turtlebot3_ws/src/turtlebot3_auto_unload/turtlebot3_auto_unload/: __init__.py  mission_manager.py
turtlebot3_ws/src/turtlebot3_dumpbox/: CMakeLists.txt  package.xml
turtlebot3_ws/src/turtlebot3_dumpbox/config/: README.md
turtlebot3_ws/src/turtlebot3_dumpbox/launch/: mission_executor.launch.py  placeholder.launch.py  robot_bringup.launch.py
turtlebot3_ws/src/turtlebot3_dumpbox/src/common/: heartbeat_node.cpp
turtlebot3_ws/src/turtlebot3_dumpbox/src/remote/: mission_executor_node.cpp
turtlebot3_ws/src/turtlebot3_dumpbox/src/robot/: servo_controller_node.cpp
turtlebot3_ws/src/turtlebot3_emergency/: README.md  package.xml  setup.cfg  setup.py
turtlebot3_ws/src/turtlebot3_emergency/launch/: emergency_bridge.launch.py
turtlebot3_ws/src/turtlebot3_emergency/resource/: turtlebot3_emergency
turtlebot3_ws/src/turtlebot3_emergency/turtlebot3_emergency/: emergency_bridge.py
turtlebot3_ws/src/turtlebot3_unload/: README.md  package.xml  setup.cfg  setup.py
turtlebot3_ws/src/turtlebot3_unload/config/: destinations.yaml
turtlebot3_ws/src/turtlebot3_unload/launch/: unload.launch.py  unload_mission.launch.py  unload_system.launch.py
turtlebot3_ws/src/turtlebot3_unload/resource/: turtlebot3_unload
turtlebot3_ws/src/turtlebot3_unload/turtlebot3_unload/: __init__.py  mission_manager.py  unload_node.py
(+371 files in other folders)
