<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_auto_unload</name>
  <version>0.1.0</version>
  <description>
    Mission coordination for TurtleBot3 automatic unloading, integrating ArUco-based parking and dumpbox control.
  </description>
  <maintainer email="team6@example.com">team6</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_applications</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>turtlebot3_automatic_parking_vision</exec_depend>
  <exec_depend>turtlebot3_aruco</exec_depend>
  <exec_depend>turtlebot3_dumpbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
