<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_unload</name>
  <version>0.1.0</version>
  <description>Unload mission for TurtleBot3</description>
  <maintainer email="team6@example.com">team6</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

